# data-availability-dashboard

./: .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: data-overview-linting.yml  docker-data-overview.yml
authenticate/: urls.py
dashboard/: celery.py  settings.py  urls.py
data_availability/: admin.py  app.py  apps.py  menus.py  middleware.py  models.py  tasks.py  urls.py  views.py
data_availability/components/: chart.py  constants.py  data.py  feature_loader.py  filter.py  info_box.py  table.py
data_availability/data/: cat_config.yml  create_table.sql  export_to_csv.py  import_csv.sql  import_csv_into_postgres.py  medical.csv  query_postgres.py
data_availability/migrations/: 0001_initial.py  0002_centre.py  0003_patient_centre_name.py  0004_patient_age.py  0005_config.py  0006_auto_20220510_0225.py  0007_config_db_port.py  0008_remove_config_centres.py  0009_feature.py  0010_alter_feature_type.py  0011_auto_20220803_0820.py  0012_rename_data_store_query_config_data_store_query.py  0013_config_dashboard_title.py  0014_dashboard.py  0015_auto_20221005_0234.py  0016_config_url_endpoint.py  0017_feature_config.py
data_availability/templates/data_availability/: dashboard.html
deploy/: start_celery.sh  start_server.sh
static/css/: base.css  dark-mode.css  dropdown.css  material_icons.css  tooltipster-sideTip-light.min.css  tooltipster.bundle.min.css
static/images/: refs.txt
static/js/: angular-tooltipster.js  dark-mode-switch.min.js
templates/: 404.html  base.html
templates/authenticate/: login.html
(+2 files in other folders)
